add more polybar config

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -18,7 +18,7 @@
 	;;date = %Y-%m-%d%
 
 	; Optional time format
-	time =   %a %H:%M
+	time =  %a %H:%M
 	time-alt =    %d %B %Y
 
 	; Available tags:
@@ -26,7 +26,7 @@
 	format = <label>
 	format-background = ${color.background}
 	format-foreground = ${color.red}
-	format-padding = 3
+	format-padding = ${workspace_config.padding}
 
 	; Available tokens:
 	;   %date%
@@ -69,7 +69,7 @@
 	format-charging = <animation-charging> <label-charging>
 	format-charging-background = ${color.background}
 	format-charging-foreground = ${color.orange}
-	format-charging-padding = 1
+	format-charging-padding = ${workspace_config.padding}
 	; available tokens:
 	;   %percentage% (default)
 	;   %time%
@@ -84,25 +84,25 @@
 	format-discharging = <ramp-capacity> <label-discharging>
 	format-discharging-background = ${color.background}
 	format-discharging-foreground = ${color.orange}
-	format-discharging-padding = 1
+	format-discharging-padding = ${workspace_config.padding}
 	; available tokens:
 	;   %percentage% (default)
 	;   %time%
 	;   %consumption% (shows current discharge rate in watts)
-	label-discharging = " %percentage%% "
+	label-discharging = "%percentage%%"
 
 	; available tags:
 	;   <label-full> (default)
 	;   <bar-capacity>
 	;   <ramp-capacity>
 	format-full = <label-full>
-	format-full-prefix = "  "
+	format-full-prefix = " "
 	format-full-background = ${color.background}
 	format-full-foreground = ${color.orange}
-	format-full-padding = 1
+	format-full-padding = ${workspace_config.padding}
 	; available tokens:
 	;   %percentage% (default)
-	label-full = " %percentage%% "
+	label-full = "%percentage%%"
 
 	; only applies if <ramp-capacity> is used
 	ramp-capacity-0 = 
@@ -169,14 +169,14 @@
 	format-connected-prefix = " "
 	format-connected-background = ${color.background}
 	format-connected-foreground = ${color.yellow}
-	format-connected-padding = 1
+	format-connected-padding = ${workspace_config.padding}
 
 	; Available tags:
 	;   <label-disconnected> (default)
 	format-disconnected = <label-disconnected>
 	format-disconnected-prefix = "ﲁ "
 	format-disconnected-background = ${color.background}
-	format-disconnected-padding = 1
+	format-disconnected-padding = ${workspace_config.padding}
 
 	; Available tags:
 	;   <label-connected> (default)
@@ -195,12 +195,12 @@
 	;   %linkspeed% [wired]
 	; Default: %ifname% %local_ip%
 	; label-connected = " %{A1:networkmanager_dmenu &:}%essid% %{A} %{F#78909C} %downspeed%  %upspeed%%{F-} "
-	label-connected = " %{A1:networkmanager_dmenu &:}%essid% %{A}"
+	label-connected = "%{A1:networkmanager_dmenu &:}%essid% %{A}"
 
 	; Available tokens:
 	;   %ifname%    [wireless+wired]
 	; Default: (none)
-	label-disconnected = " %{A1:networkmanager_dmenu &:} Offline %{A}"
+	label-disconnected = "%{A1:networkmanager_dmenu &:} Offline %{A}"
 	;;label-disconnected-foreground = #66ffffff
 
 	; Available tokens:
@@ -261,12 +261,12 @@
 	format-volume = <label-volume>
 	format-volume-background = ${color.background}
 	format-volume-foreground = ${color.green}
-	format-volume-padding = 0
-	format-volume-prefix = "   "
+	format-volume-padding = ${workspace_config.padding}
+	format-volume-prefix = " "
 
 	; Available tokens:
 	;   %percentage% (default)
-	label-volume = "%percentage%% "
+	label-volume = "%percentage%%"
 	label-volume-font = ${workspace_config.font}
 
 	; Available tags:
@@ -282,7 +282,7 @@
 
 	; Available tokens:
 	;   %percentage% (default
-	label-muted = " Muted "
+	label-muted = "Muted"
 	label-muted-foreground = ${color.green}
 
 	; Only applies if <ramp-volume> is used
@@ -321,7 +321,7 @@
 
 	; Available tokens:
 	;   %percentage% (default)
-	label = " %percentage%% "
+	label = "%percentage%%"
 
 	; Only applies if <ramp> is used
 	ramp-0 = 
@@ -380,12 +380,12 @@
 	;   %free%
 	;   %used%
 	; Default: %mountpoint% %percentage_free%%
-	label-mounted = " %free%"
+	label-mounted = "%free%"
 
 	; Available tokens:
 	;   %mountpoint%
 	; Default: %mountpoint% is not mounted
-	label-unmounted = " %mountpoint%: not mounted"
+	label-unmounted = "%mountpoint%: not mounted"
 
 	;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -394,11 +394,11 @@
 
 	interval = 5
 	format = <label>
-	format-prefix = "  "
+	format-prefix = " "
 	format-padding = 2
 	format-foreground = ${color.purple}
 	format-background = ${color.background}
-	label = " %percentage_used%% "
+	label = "%percentage_used%%"
 
 [module/swap]
 	inherit = module/memory
