--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -22,14 +22,14 @@
 	underline-color = ${color.foreground}
 	border-color = ${color.background}
 
-	offset-x = 15
+	offset-x = 0
 	offset-y = 20
-	radius = 5
+	radius = 4
 	height = 30
-	padding = 0
+	padding = 1
   module-margin = 0
 
-	separator =
+	separator = 
 	dim-value = 1
 
 	wm-name = bspwm
@@ -58,10 +58,9 @@
 	font-0 = "Fira Code Mono:style=Regular:size=12;3"
 	font-1 = "Iosevka Nerd Font Mono:style=Medium:size=18;4"
 
-
 	modules-left = padding workspaces padding
-	modules-center =
-	modules-right = padding cpu memory filesystem sep brightness sep volume sep network sep battery sep date sep sysmenu padding
+	modules-center = 
+	modules-right = padding cpu memory filesystem brightness volume network battery date sysmenu padding
 
 [bar/main]
 	inherit = config
