add background opacity and theme to kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,6 @@
+# theme
+include ./theme.conf
+
 # font family
 font_family Jetbrains Mono
 bold_font Jetbrains Mono Bold
@@ -6,6 +9,9 @@ bold_italic_font Jetbrains Mono Bold Italic
 
 # font size
 font_size 14.0
+
+# background opacity
+background_opacity 0.8
 
 # disable beeps
 enable_audio_bell no
