fix laptop polybar config

--- a/.config/polybar/laptop_config.ini
+++ b/.config/polybar/laptop_config.ini
@@ -2,8 +2,8 @@
 	margin-bottom = 0
 	margin-top = 10
 
-	include-file = ~/.config/polybar/colors.ini
-	include-file = ~/.config/polybar/modules.ini
+	include-file = ~/.config/polybar/laptop_colors.ini
+	include-file = ~/.config/polybar/laptop_modules.ini
 
 [config]
 	monitor =
