--- a/.config/polybar/desktop_config.ini
+++ b/.config/polybar/desktop_config.ini
@@ -56,7 +56,7 @@
 
 	modules-left = padding workspaces padding
 	modules-center = 
-	modules-right = padding cpu memory filesystem brightness volume network battery date sysmenu padding
+	modules-right = padding cpu memory filesystem brightness volume keyboard date sysmenu padding
 
 [bar/main]
 	inherit = config
