improve keyboard module in polybar

--- a/.config/polybar/desktop_modules.ini
+++ b/.config/polybar/desktop_modules.ini
@@ -302,13 +302,17 @@
 
 	format = <label-layout> <label-indicator>
 	format-prefix = 
-	format-background = ${color.shade7}
+	format-background = ${color.background}
 	format-padding = 1
 
-	label-layout = " %layout%"
+	label-layout = "  %icon%"
 
 	label-indicator-on = %name%
-	label-indicator-on-foreground = ${color.foreground}
+	label-indicator-on-foreground = ${color.transparent}
+
+  layout-icon-default =
+  layout-icon-0 = gb;English
+  layout-icon-1 = sy;Kurdî
 
 [module/title]
 	type = internal/xwindow
