set up config for accenture laptop

--- a/.config/polybar/laptop_config.ini
+++ b/.config/polybar/laptop_config.ini
@@ -22,7 +22,7 @@
 	offset-y = 20
 	radius = 4
 	height = 30
-	padding = 1
+	padding = 2
   module-margin = 0
 
 	separator = 
@@ -54,7 +54,7 @@
 	font-0 = "Fira Code Mono:style=Regular:size=12;3"
 	font-1 = "Iosevka Nerd Font Mono:style=Medium:size=18;4"
 
-	modules-left = padding workspaces padding
+	modules-left = workspaces
 	modules-center = 
 	modules-right = padding cpu memory filesystem brightness volume network battery date sysmenu padding
 
