--- a/.config/polybar/laptop_config.ini
+++ b/.config/polybar/laptop_config.ini
@@ -1,7 +1,6 @@
 [global/wm]
 	margin-bottom = 0
-	margin-top = 10
-
+	margin-top = 0
 	include-file = ~/.config/polybar/laptop_colors.ini
 	include-file = ~/.config/polybar/laptop_modules.ini
 
@@ -17,50 +16,27 @@
 	underline-size = 2
 	underline-color = ${color.foreground}
 	border-color = ${color.background}
-
-	offset-x = 0
-	offset-y = 20
-	radius = 4
+	offset-x = 10
+	offset-y = 10
+	radius = 5
 	height = 30
-	padding = 1
-  module-margin = 0
-
+	padding = 0
+    module-margin = 0
 	separator = 
 	dim-value = 1
-
 	wm-name = bspwm
 	wm-restack = bspwm
 	enable-ipc = true
 	locale =
-
-	tray-position = none
-	tray-detached = true
-	tray-maxsize = 100
-	tray-background = ${color.background}
-	tray-offset-x = 150
-	tray-offset-y = 0
-	tray-padding = 0
-	tray-scale = 1.0
-
-	click-left =
-	click-middle =
-	click-right =
-	double-click-left =
-	double-click-middle =
-	double-click-right =
-	cursor-click =
-	cursor-scroll =
-
 	font-0 = "Fira Code Mono:style=Regular:size=12;3"
 	font-1 = "Iosevka Nerd Font Mono:style=Medium:size=18;4"
-
-	modules-left = padding workspaces padding
+	modules-left = workspaces
 	modules-center = 
 	modules-right = padding cpu memory filesystem brightness volume network battery date sysmenu padding
 
 [bar/main]
 	inherit = config
-	width = 1920
+	width = 1900
 
 [bar/main_external]
 	inherit = config
@@ -70,14 +46,11 @@
 	throttle-output = 5
 	throttle-output-for = 10
 	screenchange-reload = true
-
 	compositing-background = source
 	compositing-foreground = over
 	compositing-overline = over
 	compositing-underline = over
 	compositing-border = over
-
 	pseudo-transparency = false
-
 	scroll-up = bspwm-desknext
 	scroll-down = bspwm-deskprev
