--- a/.config/polybar/laptop_modules.ini
+++ b/.config/polybar/laptop_modules.ini
@@ -1,142 +1,103 @@
 [module/sysmenu]
 	type = custom/text
-	content = "  "
+	content = ""
 	content-background = ${color.background}
 	content-foreground = ${color.grey}
 	content-padding = ${workspace_config.padding}
-	content-font = ${workspace_config.font} 
 	click-left = ~/.config/rofi/powermenu.sh &
 
 [module/date]
 	type = internal/date
-
 	interval = 1.0
-
-	time =  %a %H:%M
+	time =   %a %H:%M
 	time-alt =    %d %B %Y
-
 	format = <label>
 	format-background = ${color.background}
 	format-foreground = ${color.red}
 	format-padding = ${workspace_config.padding}
-
 	label = %time%
 
 [module/battery]
 	type = internal/battery
-
 	full-at = 99
-
 	battery = BAT0
 	adapter = AC
-
 	poll-interval = 60
-
 	time-format = %H:%M
-
 	format-charging = <animation-charging> <label-charging>
 	format-charging-background = ${color.background}
 	format-charging-foreground = ${color.orange}
 	format-charging-padding = ${workspace_config.padding}
-
-	label-charging = "%percentage%%"
-
+	label-charging = " %percentage%%"
 	format-discharging = <ramp-capacity> <label-discharging>
 	format-discharging-background = ${color.background}
 	format-discharging-foreground = ${color.orange}
 	format-discharging-padding = ${workspace_config.padding}
-
-	label-discharging = "%percentage%%"
-
+	label-discharging = " %percentage%%"
 	format-full = <label-full>
-	format-full-prefix = " "
+	format-full-prefix = "  "
 	format-full-background = ${color.background}
 	format-full-foreground = ${color.orange}
 	format-full-padding = ${workspace_config.padding}
-
-	label-full = "%percentage%%"
-
-	ramp-capacity-0 = 
-	ramp-capacity-1 = 
-	ramp-capacity-2 = 
-	ramp-capacity-3 = 
-	ramp-capacity-4 = 
-
-	animation-charging-0 = 
-	animation-charging-1 = 
-	animation-charging-2 = 
-	animation-charging-3 = 
-	animation-charging-4 = 
-
+	label-full = " %percentage%%"
+	ramp-capacity-0 = " "
+	ramp-capacity-1 = " "
+	ramp-capacity-2 = " "
+	ramp-capacity-3 = " "
+	ramp-capacity-4 = " "
+	animation-charging-0 = " "
+	animation-charging-1 = " "
+	animation-charging-2 = " "
+	animation-charging-3 = " "
+	animation-charging-4 = " "
 	animation-charging-framerate = 750
 
 [module/network]
 	type = internal/network
-
 	interface = wlp61s0
-
 	interval = 1
-
 	ping-interval = 0
-
 	accumulate-stats = true
-
 	unknown-as-up = true
-
 	format-connected = <label-connected>
 	format-connected-prefix = " "
 	format-connected-background = ${color.background}
 	format-connected-foreground = ${color.yellow}
 	format-connected-padding = ${workspace_config.padding}
-
 	format-disconnected = <label-disconnected>
 	format-disconnected-prefix = "ﲁ "
 	format-disconnected-background = ${color.background}
 	format-disconnected-padding = ${workspace_config.padding}
-
-	label-connected = "%{A1:networkmanager_dmenu &:}%essid% %{A}"
-
-	label-disconnected = "%{A1:networkmanager_dmenu &:} Offline %{A}"
-
-	ramp-signal-0 = 說
-	ramp-signal-1 = 說
-	ramp-signal-2 = 說
+	label-connected = " %{A1:networkmanager_dmenu &:}%essid% %{A}"
+	label-disconnected = " %{A1:networkmanager_dmenu &:} Offline %{A}"
+	ramp-signal-0 = "說 "
+	ramp-signal-1 = "說 "
+	ramp-signal-2 = "說 "
 
 [module/volume]
 	type = internal/pulseaudio
-
 	master-soundcard = default
 	speaker-soundcard = default
 	headphone-soundcard = default
-
 	master-mixer = Master
-
 	interval = 5
-
 	format-volume = <label-volume>
 	format-volume-background = ${color.background}
 	format-volume-foreground = ${color.green}
 	format-volume-padding = ${workspace_config.padding}
 	format-volume-prefix = " "
-
-	label-volume = "%percentage%%"
-	label-volume-font = ${workspace_config.font}
-
+	label-volume = " %percentage%%"
 	format-muted = <label-muted>
 	format-muted-prefix = " "
 	format-muted-background = ${color.background}
 	format-muted-foreground = ${color.green}
 	format-muted-padding = ${workspace_config.padding}
-	format-muted-font = ${workspace_config.font}
-
 	label-muted = "Muted"
 	label-muted-foreground = ${color.green}
-
-	ramp-volume-0 = "奄  "
-	ramp-volume-1 = "奔  "
-	ramp-volume-2 = "墳  "
-
-	ramp-headphones-0 = 
+	ramp-volume-0 = "奄 "
+	ramp-volume-1 = "奔 "
+	ramp-volume-2 = "墳 "
+	ramp-headphones-0 = " "
 
 [module/xbacklight]
 	type = internal/xbacklight
@@ -145,81 +106,62 @@
 [module/brightness]
 	inherit = module/xbacklight
 	type = internal/backlight
-
 	card = intel_backlight
-
 	format = <label>
 	format-background = ${color.background}
 	format-foreground = ${color.light-blue}
 	format-padding = ${workspace_config.padding} 
 	format-prefix = " "
-	format-font = ${workspace_config.config} 
-
-	label = "%percentage%%"
-
-	ramp-0 = 
-	ramp-1 = 
-	ramp-2 = 
-	ramp-3 = 
-	ramp-4 = 
+	label = " %percentage%%"
+	ramp-0 = " "
+	ramp-1 = " "
+	ramp-2 = " "
+	ramp-3 = " "
+	ramp-4 = " "
 
 [module/filesystem]
 	type = internal/fs
-
 	mount-0 = /
-
 	interval = 30
-
 	fixed-values = false
-
 	format-mounted = <label-mounted>
 	format-mounted-prefix = " "
 	format-mounted-foreground = ${color.purple}
 	format-mounted-background = ${color.background}
 	format-mounted-padding = ${workspace_config.padding}
-	format-mounted-font = ${workspace_config.font}
-
 	format-unmounted = <label-unmounted>
-	format-unmounted-prefix = 
+	format-unmounted-prefix = " "
 	format-unmounted-foreground = ${color.purple}
 	format-unmounted-background = ${color.background}
 	format-unmounted-padding = 2
-
-	label-mounted = "%free%"
-
+	label-mounted = " %free%"
 	label-unmounted = "%mountpoint%: not mounted"
 
 [module/memory]
 	type = internal/memory
-
 	interval = 5
 	format = <label>
 	format-prefix = " "
 	format-padding = 2
 	format-foreground = ${color.purple}
 	format-background = ${color.background}
-	label = "%percentage_used%%"
+	label = " %percentage_used%%"
 
 [module/swap]
 	inherit = module/memory
-
 	interval = 10
 	format-prefix = "⇄ "
 	label = " %percentage_swap_used%% "
 
 [module/cpu]
 	type = internal/cpu
-
 	interval = 2
-
 	format = <label>
 	format-background = ${color.background}
 	format-foreground = ${color.purple}
 	format-prefix = " "
 	format-padding = ${workspace_config.padding}
-	format-font = ${workspace_config.font} 
-
-	label = "%percentage:02%%"
+	label = " %percentage:02%%"
 
 [module/network_speed]
 	type = internal/network
@@ -239,7 +181,6 @@
 
 [module/bspwm]
 	type = internal/bspwm
-
 	format-background = ${color.background}
 	format-foreground = ${color.light-blue}
 	pin-workspaces = true
@@ -312,15 +253,12 @@
 
 [module/title]
 	type = internal/xwindow
-
 	format = <label>
 	format-background = ${color.background}
 	format-foreground = ${color.shade8}
 	format-padding = 2
-
 	label = " %title% "
 	label-maxlen = 50
-
 	label-empty = " Desktop"
 	label-empty-foreground = ${color.shade8}
 
@@ -330,53 +268,38 @@
 
 [module/workspaces]
 	type = internal/xworkspaces
-
 	format-background = ${color.background}
-	format-padding = 2
+	format-padding = 1
 	pin-workspaces = true
 	enable-click = true
 	enable-scroll = true
-
 	icon-default = 
-
 	format = <label-state>
-
 	label-monitor = %name%
-
 	label-active = 
 	label-active-foreground = ${color.grey}
-	label-active-font = ${workspace_config.font}
 	label-active-padding = ${workspace_config.padding}
-
 	label-occupied = 
 	label-occupied-foreground = ${color.dark-blue}
-	label-occupied-font = ${workspace_config.font}
 	label-occupied-padding = ${workspace_config.padding}
-
 	label-urgent = 
 	label-urgent-foreground = ${color.dark-blue}
-	label-urgent-font = ${workspace_config.font}
 	label-urgent-padding = ${workspace_config.padding}
-
 	label-empty = 
 	label-empty-foreground = ${color.dark-blue}
-	label-empty-font = ${workspace_config.font}
 	label-empty-padding = ${workspace_config.padding}
 
 [module/launcher]
 	type = custom/text
 	content = "  "
-
 	content-background = ${color.shade1}
 	content-foreground = ${color.foreground}
 	content-padding = 1
-
 	click-left = ~/.config/rofi/launcher.sh &
 
 [module/sep]
 	type = custom/text
 	content = " | "
-
 	content-background = ${color.background}
 	content-foreground = ${color.polar-2}
 	content-padding = 1 
@@ -384,7 +307,6 @@
 [module/padding]
 	type = custom/text
 	content = " "
-
 	content-background = ${color.background}
 	content-foreground = ${color.shade1}
 	content-padding = 1
@@ -422,16 +344,12 @@
 
 [module/temperature]
 	type = internal/temperature
-
 	interval = 5
 	hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
-
 	format = <label>
 	format-background = ${color.background}
 	format-foreground = ${color.shade3}
 	format-padding = ${workspace_config.padding}
-	format-font = ${workspace_config.font} 
-
 	label = " %temperature-c%"
 	label-warn = "   %temperature-c%  "
 	label-warn-foreground = ${color.aurora-1}
