--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,10 +2,10 @@
 include ./theme.conf
 
 # font family
-font_family Jetbrains Mono
-bold_font Jetbrains Mono Bold
-italic_font Jetbrains Mono Italic
-bold_italic_font Jetbrains Mono Bold Italic
+font_family JetBrainsMono NF
+bold_font auto
+italic_font auto
+bold_italic_font auto
 
 # font size
 font_size 14.0
