update config for desktop

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,10 +2,10 @@
 include ./theme.conf
 
 # font family
-font_family Jetbrains Mono
-bold_font Jetbrains Mono Bold
-italic_font Jetbrains Mono Italic
-bold_italic_font Jetbrains Mono Bold Italic
+font_family JetbrainsMono NF
+bold_font JetbrainsMono NF Bold
+italic_font JetbrainsMono NF Italic
+bold_italic_font JetbrainsMono NF Bold Italic
 
 # font size
 font_size 14.0
