--- a/.config/polybar/desktop_config.ini
+++ b/.config/polybar/desktop_config.ini
@@ -1,17 +1,17 @@
 [global/wm]
 	margin-bottom = 0
-	margin-top = 10
+	margin-top = 0
 
 	include-file = ~/.config/polybar/desktop_colors.ini
 	include-file = ~/.config/polybar/desktop_modules.ini
 
 [config]
-	monitor =
-	monitor-fallback =
+	monitor = "DP-2"
+	monitor-fallback = "DP-4"
 	monitor-strict = false
 	override-redirect = false
 	bottom = false
-	fixed-center = false
+	fixed-center = true
 	background = ${color.transparent}
 	foreground = ${color.foreground}
 	underline-size = 2
@@ -19,11 +19,11 @@
 	border-color = ${color.background}
 
 	offset-x = 0
-	offset-y = 20
+	offset-y = 10
 	radius = 4
 	height = 30
-	padding = 3
-  module-margin = 0
+	padding = 1
+    module-margin = 0
 
 	separator = 
 	dim-value = 1
@@ -33,38 +33,18 @@
 	enable-ipc = true
 	locale =
 
-	tray-position = none
-	tray-detached = true
-	tray-maxsize = 100
-	tray-background = ${color.background}
-	tray-offset-x = 150
-	tray-offset-y = 0
-	tray-padding = 0
-	tray-scale = 1.0
-
-	click-left =
-	click-middle =
-	click-right =
-	double-click-left =
-	double-click-middle =
-	double-click-right =
-	cursor-click =
-	cursor-scroll =
-
-	font-0 = "Fira Code Mono:style=Regular:size=11;4"
-	font-1 = "Iosevka Nerd Font Mono:style=Medium:size=18;5"
+	font-0 = "FiraCode Nerd Font Mono:style=Reg:size=16;4"
+	font-1 = "Inconsolata Nerd Font:style=Regular:size=18;5"
 
 	modules-left = padding workspaces padding
 	modules-center = 
-	modules-right = padding cpu memory filesystem brightness volume keyboard date sysmenu padding
+	modules-right = padding cpu memory filesystem brightness volume keyboard tray date sysmenu padding
 
 [bar/main]
 	inherit = config
-	width = 2560
+	width = 100%
 
 [settings]
-	throttle-output = 5
-	throttle-output-for = 10
 	screenchange-reload = true
 
 	compositing-background = source
@@ -74,6 +54,3 @@
 	compositing-border = over
 
 	pseudo-transparency = false
-
-	scroll-up = bspwm-desknext
-	scroll-down = bspwm-deskprev
