--- a/.config/polybar/desktop_modules.ini
+++ b/.config/polybar/desktop_modules.ini
@@ -1,3 +1,9 @@
+[module/tray]
+    type = internal/tray
+    format = <tray>
+	tray-background = ${color.background}
+	tray-padding = 0
+
 [module/sysmenu]
 	type = custom/text
 	content = "  "
