--- a/.config/polybar/desktop_modules.ini
+++ b/.config/polybar/desktop_modules.ini
@@ -2,7 +2,7 @@
     type = internal/tray
     format = <tray>
 	tray-background = ${color.background}
-	tray-padding = 0
+	tray-padding = 10
 
 [module/sysmenu]
 	type = custom/text
@@ -317,7 +317,7 @@
 	label-indicator-on-foreground = ${color.transparent}
 
   layout-icon-default =
-  layout-icon-0 = gb;English
+  layout-icon-0 = us;English
   layout-icon-1 = sy;Kurdî
 
 [module/title]
@@ -336,13 +336,13 @@
 
 [workspace_config]
 	font = 1
-	padding = 3
+	padding = 2
 
 [module/workspaces]
 	type = internal/xworkspaces
 
 	format-background = ${color.background}
-	format-padding = 2
+	format-padding = 0
 	pin-workspaces = true
 	enable-click = true
 	enable-scroll = true
