--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,7 +9,29 @@
 
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "screen-256color" # colors!
+# colors
+set-option -sa terminal-overrides ",xterm*:Tc"
+
+# mouse support
+set -g mouse on
+
+# start windows at index 1
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# set vi-mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+#set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
@@ -169,6 +191,22 @@ source -q ~/.tmux.conf.local
 
 run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 
+# list of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'macchiato'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
 
 # EOF
 #
