--- a/.config/polybar/desktop_colors.ini
+++ b/.config/polybar/desktop_colors.ini
@@ -1,9 +1,8 @@
 [color]
 
-;; main colors
+; main colors
 transparent = #002E3440
 
-; background = #0c121a
 background = #2E3440
 foreground = #ECEFF4
 foreground-alt = #ECEFF4
