--- a/.config/polybar/desktop_config.ini
+++ b/.config/polybar/desktop_config.ini
@@ -12,17 +12,17 @@
 	override-redirect = false
 	bottom = false
 	fixed-center = true
-	background = ${color.transparent}
+	background = ${color.background}
 	foreground = ${color.foreground}
 	underline-size = 2
 	underline-color = ${color.foreground}
 	border-color = ${color.background}
 
-	offset-x = 0
+	offset-x = 10
 	offset-y = 10
-	radius = 4
+	radius = 2
 	height = 30
-	padding = 1
+	padding = 0
     module-margin = 0
 
 	separator = 
@@ -38,11 +38,11 @@
 
 	modules-left = padding workspaces padding
 	modules-center = 
-	modules-right = padding cpu memory filesystem brightness volume keyboard tray date sysmenu padding
+	modules-right = padding cpu memory filesystem brightness volume keyboard date tray sysmenu padding
 
 [bar/main]
 	inherit = config
-	width = 100%
+	width = 99.5%
 
 [settings]
 	screenchange-reload = true
