remove bind from tmux.conf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -52,9 +52,6 @@ set -g display-time 1000
 # redraw status line every 10 seconds
 set -g status-interval 10
 
-# clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
-
 # activity
 set -g monitor-activity on
 set -g visual-activity off
@@ -62,13 +59,14 @@ set -g visual-activity off
 
 # -- plugins -------------------------------------------------------------------
 
-# list of plugins
+# theme flavour
+set -g @catppuccin_flavour 'macchiato'
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavour 'macchiato'
 
 # initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
