fix polybar language identifier

--- a/.config/polybar/desktop_modules.ini
+++ b/.config/polybar/desktop_modules.ini
@@ -1,6 +1,6 @@
 [module/tray]
-    type = internal/tray
-    format = <tray>
+  type = internal/tray
+  format = <tray>
 	tray-background = ${color.background}
 	tray-padding = 10
 
@@ -317,7 +317,7 @@
 	label-indicator-on-foreground = ${color.transparent}
 
   layout-icon-default =
-  layout-icon-0 = us;English
+  layout-icon-0 = gb;English
   layout-icon-1 = sy;Kurdî
 
 [module/title]
