configure bspwm for dual monitors

--- a/.config/polybar/desktop_modules.ini
+++ b/.config/polybar/desktop_modules.ini
@@ -345,7 +345,7 @@
 	format-padding = 0
 	pin-workspaces = true
 	enable-click = true
-	enable-scroll = true
+	enable-scroll = false
 
 	icon-default = 
 
