--- a/.config/polybar/desktop_config.ini
+++ b/.config/polybar/desktop_config.ini
@@ -6,8 +6,6 @@
 	include-file = ~/.config/polybar/desktop_modules.ini
 
 [config]
-	monitor = "DP-2"
-	monitor-fallback = "DP-4"
 	monitor-strict = false
 	override-redirect = false
 	bottom = false
@@ -23,7 +21,7 @@
 	radius = 2
 	height = 30
 	padding = 0
-    module-margin = 0
+  module-margin = 0
 
 	separator = 
 	dim-value = 1
@@ -36,13 +34,21 @@
 	font-0 = "FiraCode Nerd Font Mono:style=Reg:size=16;4"
 	font-1 = "Inconsolata Nerd Font:style=Regular:size=18;5"
 
+[bar/side]
+	inherit = config
+	width = 99.5%
+	monitor = "DP-4"
 	modules-left = padding workspaces padding
-	modules-center = 
-	modules-right = padding cpu memory filesystem brightness volume keyboard date tray sysmenu padding
+	modules-center =
+	modules-right =
 
 [bar/main]
 	inherit = config
 	width = 99.5%
+	monitor = "DP-2"
+	modules-left = padding workspaces padding
+	modules-center = 
+	modules-right = padding cpu memory filesystem brightness volume keyboard date tray sysmenu padding
 
 [settings]
 	screenchange-reload = true
